--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "npm run dev -- --open",
     "lint": "eslint --ext .js,.vue src",
     "build": "node build/build.js",
+    "report": "npm run build --report",
     "deploy": "npm run build && gh-pages -d dist"
   },
   "dependencies": {
@@ -65,7 +66,7 @@
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
     "webpack": "^3.6.0",
-    "webpack-bundle-analyzer": "^2.9.0",
+    "webpack-bundle-analyzer": "^3.6.1",
     "webpack-dev-server": "^2.9.1",
     "webpack-merge": "^4.1.0"
   },
